--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 <body>
     <div class="contain">
         <h1></h1>
+        <p id="path"></p>
         <div class="board">
             <table></table>
         </div>
+        <p id="result"></p>
     </div>
 </body>
 <script src="app.js"></script>
